# Drasus-Engine

./: .gitignore  CLAUDE.md  CONTENT-STRATEGY.md  Cargo.toml  UI-ARCHITECTURE.md  content-creator.md  flutter_rust_bridge.yaml
.agents/knowledge/: README.md  WRITING-EFFICIENCY.MD  base.md  base_gemini.md  brief.md  commenting-policy.md  critical-domain-reasoning.md  debt-management.md  memory-policy.md  ponytail.md
.agents/memory/: MEMORY.md  arquitectura-visual-canvas.md  auditoria-retroactiva-epic0.md  banco-de-pruebas-dod-y-promocion-deuda.md  banco-estrategias-portafolios-clusters.md  comentarios-ponytail-reconciliacion.md  comunicacion-lenguaje-llano-ceo.md  drasus-portal-cabina-de-mando.md  feedback-economia-redaccion.md  feedback-estructura-visual-explicaciones.md  feedback-svf-galeria-transversal.md  galeria-componentes-estado.md  marca-personal-estado.md  politica-de-pruebas-y-validacion.md  pricing-foundations-saas.md  quantforge-docs-repo-origen.md  razonamiento-critico-dominio.md  roadmap-metodologia-modulo-completo.md
.agents/plans/: magical-sprouting-quasar.md  se-que-la-arquitectura-fuzzy-hearth.md
.agents/templates/: KNOWLEDGE.md  RULE.md
.claude/: settings.json
.claude/knowledge/: base.md
.claude/memory/: MEMORY.md  adr-0020-contrato-logico.md  debt-registry-y-atomicidad.md  feedback-askuserquestion-no-auto-continuar.md  feedback-commit-cadence.md  glass-performance-2026-06-25.md  pricing-foundations-saas.md  roles-explicitos-y-subagentes.md  verification-surface-svf.md
.claude/plans/: estamos-teniendo-problemas-importantes-hazy-cloud.md  se-que-la-arquitectura-fuzzy-hearth.md  tengo-feedback-1-en-peaceful-breeze.md
.claude/skills/: _TEMPLATE.md
.claude/tech-lead/: PROGRESS.md
.opencode/agents/: architect.md  bridge-engineer.md  flutter-engineer.md  qa-engineer.md  quant-engineer.md  refactoring-engineer.md  rust-engineer.md  tech-lead.md  ui-designer.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: kill9_recovery.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: frb_generated.rs  lib.rs
crates/bridge/src/api/: audit.rs  clock.rs  data_fetcher.rs  jobs.rs  mod.rs  verification.rs
crates/execute/: Cargo.toml
crates/features/_TEMPLATE/: Cargo.toml
crates/features/_TEMPLATE/src/: domain.rs  lib.rs  orchestrator.rs  persistence.rs  public_interface.rs  schemas.rs
crates/features/data/sovereign-data-fetcher/: Cargo.toml
crates/features/data/sovereign-data-fetcher/src/: domain.rs  lib.rs  orchestrator.rs  persistence.rs  public_interface.rs  schemas.rs
crates/features/data/sovereign-data-fetcher/tests/: integration_tests.rs
crates/feedback/: Cargo.toml
crates/generate/: Cargo.toml
crates/incubate/: Cargo.toml
crates/ingest/: Cargo.toml
crates/manage/: Cargo.toml
crates/nautilus_compat/: Cargo.toml
crates/nautilus_compat/src/: lib.rs
crates/nautilus_compat/tests/: smoke_test.rs
crates/presets/standard-pipeline/: Cargo.toml
crates/presets/standard-pipeline/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: clock_audit.rs  lib.rs  public_interface.rs  schemas.rs
crates/shared/src/domain/: audit_log.rs  central_identity.rs  clock.rs  consent_registry.rs  data_aggregation.rs  data_portability.rs  enriched_domain_events.rs  instance_continuity.rs  institutional_report_engine.rs  job.rs  licensing_system.rs  logic.rs  master_account_hierarchy.rs  mcp_gateway.rs  mod.rs  operator_roles.rs  plan_tier_quota.rs  telemetry.rs  third_party_api_gateway.rs  usage_metering.rs  verified_account_registry.rs  worker_orchestrator.rs
crates/shared/src/orchestrator/: central_identity.rs  consent_registry.rs  data_aggregation.rs  data_portability.rs  enriched_domain_events.rs  instance_continuity.rs  institutional_report_engine.rs  job_executor.rs  licensing_system.rs  master_account_hierarchy.rs  mcp_server.rs  mod.rs  operator_roles.rs  plan_tier_quota.rs  telemetry.rs  third_party_api_gateway.rs  usage_metering.rs  verified_account_registry.rs  worker_runner.rs
crates/shared/src/persistence/: audit_log.rs  central_identity.rs  consent_registry.rs  data_aggregation.rs  data_portability.rs  enriched_domain_events.rs  instance_continuity.rs  institutional_report_engine.rs  job.rs  licensing_system.rs  master_account_hierarchy.rs  mcp_gateway.rs  mod.rs  operator_roles.rs  plan_tier_quota.rs  pool.rs  telemetry.rs  third_party_api_gateway.rs  usage_metering.rs  verified_account_registry.rs
crates/shared/src/types/: mod.rs
crates/validate/: Cargo.toml
crates/withdraw/: Cargo.toml
docs/: ADR.md  DATA-MODEL.md  DEBT.md  DESIGN.md  EXECUTION-PLAN.md  README.md  ROADMAP.md  SAD.md  TEMPLATES.md  TEST.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md  ADR-0017.md  ADR-0018.md  ADR-0019.md  ADR-0020.md  ADR-0021.md  ADR-0022.md  ADR-0023.md  ADR-0024.md  ADR-0025.md  ADR-0026.md  ADR-0027.md  ADR-0028.md  ADR-0029.md  ADR-0030.md  ADR-0031.md  ADR-0032.md  ADR-0033.md  ADR-0034.md  ADR-0035.md  ADR-0036.md  ADR-0037.md  ADR-0038.md  ADR-0039.md  ADR-0040.md  (+113 more)
docs/data-model/: account_hierarchy.md  accounts.md  aggregated_indexes.md  api_credentials.md  api_usage_records.md  attested_track_records.md  audit_events.md  consent_records.md  custody_state.md  data_portability_requests.md  job_results.md  (+18 more)
migrations/: 0001_foundation_master_fields.sql  0002_audit_log.sql  0003_jobs.sql  0004_telemetry.sql  0005_mcp_gateway.sql  0006_sovereign_data_fetcher.sql  0007_central_identity.sql  0008_licensing_system.sql  0009_plan_tier_quota.sql  0010_usage_metering.sql  0011_consent_registry.sql  0012_domain_events.sql  0013_generated_reports.sql  0014_api_gateway.sql  0015_data_aggregation.sql  0016_verified_account_registry.sql  0017_instance_continuity.sql  0018_master_account_hierarchy.sql  0019_data_portability.sql  0020_operator_roles.sql
ui/: .gitignore  COMPONENTS.md  README.md  analysis_options.yaml  drasus.db  pubspec.yaml
(+587 files in other folders)
