[workspace]
resolver = "2"
members = [
    "crates/shared",
    # ── Feature crates (se añaden al crear cada feature en el ROADMAP) ──
    # "crates/features/infrastructure/*",
    # "crates/features/data/*",
    # "crates/features/generation/*",
    # "crates/features/validation/*",
    # "crates/features/execution/*",
    # "crates/features/portfolio/*",
    # "crates/features/lifecycle/*",
    "crates/presets/*",
    "crates/app",
    "crates/bridge",
    "crates/nautilus_compat",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Proprietary"
