[package]
name = "app"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "drasus"
path = "src/main.rs"

[dependencies]
# CLI declarativa: el macro derive genera el parser sin código manual.
clap = { version = "4", features = ["derive"] }

# Runtime asíncrono + señales del OS (SIGINT/SIGTERM).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# shared expone los puertos públicos del Core (Clock, JobExecutor, AuditLog).
# Acceso exclusivo vía public_interface (ADR-0003).
shared = { path = "../shared" }

# Preset estándar de los 8 pasos del pipeline (ADR-0137).
# Conforme se construyen features, sus crates se añaden aquí como dependencias.
standard-pipeline = { path = "../presets/standard-pipeline" }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
nix = { version = "0.29", features = ["signal", "process"] }
tempfile = "3"
