[package]
name = "shared"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "v7"] }
serde_json = "1"
async-trait = "0.1"
memmap2 = "0.9"
nix = { version = "0.29", features = ["signal", "process"] }
# Propagación ergonómica de errores en el Shell.
anyhow = "1"
# Derivación de Display + Error para tipos de error del Shell.
thiserror = "1"
# Hostname del nodo (Grupo IV ADR-0020 V2 — node_id del Gateway MCP).
hostname = "0.4"
# Firma/verificación asimétrica Ed25519 para licencias (ADR-0093 §3: la clave
# privada de firma NUNCA vive en el cliente; el cliente solo verifica con la
# clave pública incrustada). STORY-028.
ed25519-dalek = { version = "2", features = ["rand_core"] }
# Generador de números aleatorios criptográfico -- SOLO lo usa el emisor de
# licencias de desarrollo (Shell) para generar el par de claves de prueba;
# la verificación (Core) es pura y no lo necesita. STORY-028.
rand = "0.8"
# SDK oficial MCP para Rust (modelcontextprotocol/rust-sdk).
# "server"       → ServerHandler + transport-async-rw + schemars (integrado).
# "transport-io" → transport stdio (stdin/stdout de Tokio).
# "macros"       → #[tool], #[tool_router], #[tool_handler].
# "schemars"     → generación de JSON Schema para los parámetros de herramientas.
rmcp = { version = "1.7", default-features = false, features = ["server", "transport-io", "macros", "schemars"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
