[package]
name = "standard-pipeline"
description = "Preset canónico de los 8 pasos del pipeline Drasus Engine (ADR-0137). Cablea features en orden: ingest → generate → validate → incubate → manage → execute → feedback → withdraw. CERO lógica de negocio."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../../shared" }
# ── Dependencias a features (se añaden al construirlas en el ROADMAP) ──
# data: sovereign-fetcher, data-sanitizer, temporal-aggregator, ...
# generation: nsga2-optimizer, ast-compiler, databank-manager, ...
# validation: backtest-engine, monte-carlo-simulator, wfa-analyzer, ...
# execution: order-fsm, pre-trade-validator, broker-connector, ...
# portfolio: portfolio-optimizer, signal-correlation, ...
# lifecycle: incubation-manager, performance-monitor, ...
